@@ -15,6 +15,9 @@ object Time
 {
   def seconds(s: Double): Time = new Time((s * 1000.0).round)
   def ms(m: Long): Time = new Time(m)
+
+  def print_seconds(s: Double): String =
+    String.format(Locale.ROOT, "%.3f", s.asInstanceOf[AnyRef])
 }
 
 final class Time private(val ms: Long)
@@ -26,8 +29,7 @@ final class Time private(val ms: Long)
 
   def is_relevant: Boolean = ms >= 1
 
-  override def toString =
-    String.format(Locale.ROOT, "%.3f", seconds.asInstanceOf[AnyRef])
+  override def toString = Time.print_seconds(seconds)
 
   def message: String = toString + "s"
 }
