@@ -5,6 +5,9 @@
 	<DOCKABLE NAME="isabelle-theories" MOVABLE="TRUE">
 		new isabelle.jedit.Theories_Dockable(view, position);
 	</DOCKABLE>
+	<DOCKABLE NAME="isabelle-timing" MOVABLE="TRUE">
+		new isabelle.jedit.Timing_Dockable(view, position);
+	</DOCKABLE>
 	<DOCKABLE NAME="isabelle-syslog" MOVABLE="TRUE">
 		new isabelle.jedit.Syslog_Dockable(view, position);
 	</DOCKABLE>
